@@ -39,30 +39,18 @@
 	        <!-- Row 0 -->
 
 	        <TextView
-	            android:layout_column="0"
-	            android:layout_row="0"
-	            android:text="@string/label_connection"
-	            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-	        <TextView
 	            android:id="@+id/connectionstat_textview"
-	            android:layout_column="1"
+	            android:layout_column="0"
 	            android:layout_row="0"
 	            android:paddingLeft="5dp"
 	            android:paddingRight="5dp"
-	            android:text="@string/stat_online"
+	            android:text=""
 	            android:textAppearance="?android:attr/textAppearanceSmall"
 	            android:textStyle="bold" />
 
 	        <TextView
-	            android:layout_column="0"
-	            android:layout_row="1"
-	            android:text="@string/label_ping"
-	            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-	        <TextView
 	            android:id="@+id/pingstat_textview"
-	            android:layout_column="1"
+	            android:layout_column="0"
 	            android:layout_row="1"
 	            android:paddingLeft="5dp"
 	            android:paddingRight="5dp"
@@ -70,14 +58,8 @@
 	            android:textAppearance="?android:attr/textAppearanceSmall" />
 
 	        <TextView
-	            android:layout_column="0"
-	            android:layout_row="2"
-	            android:text="@string/label_rxtx"
-	            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-	        <TextView
 	            android:id="@+id/totalstat_textview"
-	            android:layout_column="1"
+	            android:layout_column="0"
 	            android:layout_row="2"
 	            android:paddingLeft="5dp"
 	            android:paddingRight="5dp"
