@@ -42,6 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:contentDescription="@string/speexquality"
             android:layout_weight="1" />
 
     </LinearLayout>
@@ -64,6 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:contentDescription="@string/speexinterval"
             android:layout_weight="1" />
 
         <TextView
